fix: align WorldGDP text

--- a/src/components/DataRoom/WorldGDP/styles.module.css
+++ b/src/components/DataRoom/WorldGDP/styles.module.css
@@ -30,7 +30,6 @@
   font-size: 16px;
   line-height: 24px;
   align-self: flex-start;
-  margin-left: 36px;
 }
 
 .textContainer {
@@ -48,7 +47,7 @@
 
 @media (max-width: 900px) {
   .stickyContainer {
-    padding: 72px 30px 0;
+    padding: 72px 20px 0;
     align-items: center;
   }
 
